--- a/QuotesApp/src/app/quote/quote.component.html
+++ b/QuotesApp/src/app/quote/quote.component.html
@@ -1,4 +1,11 @@
 <h2>Quotable Quotes</h2>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <app-quote-form></app-quote-form>
+    </div>
+  </div>
+</div>
 <ul>
     <div *ngFor='let quote of quotes;let i=index'>
         <li >{{ quote.quote }}</li>
