--- a/QuotesApp/src/app/quote-form/quote-form.component.html
+++ b/QuotesApp/src/app/quote-form/quote-form.component.html
@@ -1,24 +1,40 @@
 <div class="container-fluid">
     <div class="row">
+      <div class="col-md-12">
         <form>
           <div class="form-group">
 
               <label for="quote">Quote</label>
-              <textarea class="form-control" id="quote" rows="4" required></textarea>
+              <textarea class="form-control" id="quote" [(ngModel)]="newQuote.quote" name="quote" #quote="ngModel" rows="4" required></textarea>
+              <div [hidden]="quote.valid || quote.pristine" class="alert alert-danger">
+                    <p> Quote is Required</p>
+
+                </div>
 
           </div>
             <div class="form-group">
 
                 <label for="author">Author</label>
-                <input type="text" required class="form-control" id="author">
+                <input type="text" required class="form-control" id="author" [(ngModel)]="newQuote.author" name="author" #author="ngModel">
+                <div [hidden]="author.valid || author.pristine" class="alert alert-danger">
+                      <p> Quote is Required</p>
+
+                  </div>
 
             </div>
 
             <div class="form-group">
-                <label for="publisher">Publisher</label>
-                <input type='text' id="publisher" class="form-control" required>
+                <label for="publisher">Your Name</label>
+                <input type='text' id="publisher" class="form-control" [(ngModel)]="newQuote.publisher" name="publisher" #publisher="ngModel" required>
+                <div [hidden]="publisher.valid || publisher.pristine" class="alert alert-danger">
+                      <p> Publisher Name is Required</p>
+
+                  </div>
 
             </div>
+            <button type="submit" class="btn btn-success btn-lg">Quote</button>
         </form>
+      </div>
+
     </div>
 </div>
