--- a/QuotesApp/src/app/quote-details/quote-details.component.html
+++ b/QuotesApp/src/app/quote-details/quote-details.component.html
@@ -1,2 +1,2 @@
 <p>{{quote.author}} || {{quote.publisher}}</p>
-<button (click) = 'goalComplete(true)' (isComplete)= 'completeGoal($event,i)'> Complete </button>
+<button (click) = 'goalComplete(true)'> Complete </button>
