--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -8,7 +8,7 @@
 </div>
 <ul>
     <div *ngFor='let quote of quotes;let i=index'>
-        <li >{{ quote.quote }}</li>
+        <li >{{ quote.quote }}   | <app-vote></app-vote></li>
         <button  (click)='toogleDetails(i)'>Show Details</button>
         <app-quote-details *ngIf="quote.showAuthor" [quote]='quote'(isComplete)= 'deleteGoal($event,i)' ></app-quote-details>
     </div>
