google fonts added

--- a/src/app/quote-details/quote-details.component.html
+++ b/src/app/quote-details/quote-details.component.html
@@ -1,2 +1,2 @@
-<p>{{quote.author}} || {{quote.publisher}}</p>
-<button (click) = 'goalComplete(true)'> Complete </button>
+<p>Author: {{quote.author}} || Posted By: {{quote.publisher}}</p>
+<button (click) = 'goalComplete(true)' class="btn btn-danger"> Delete </button>
