add style to app-quote

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
 <app-navbar></app-navbar>
-<app-quote></app-quote>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <app-quote></app-quote>
+    </div>
+  </div>
+</div>
