--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,12 @@
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark p-100">
   <div class="container">
-    <a class="navbar-brand" href="#">Quotes App</a>
+    <a class="navbar-brand" href="#"><h1>BrainyQuotes App</h1></a>
+    <div class="row">
+      <p>Share your favorite quotes</p>
+    </div>
+
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
