--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <app-navbar></app-navbar>
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <app-quote></app-quote>
+<section id="quote-section">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <app-quote></app-quote>
+      </div>
     </div>
   </div>
-</div>
+</section>
