date of quote submission complete

--- a/src/app/quote-details/quote-details.component.html
+++ b/src/app/quote-details/quote-details.component.html
@@ -1,2 +1,2 @@
-<p>Author: {{quote.author}} || Posted By: {{quote.publisher}}</p>
+<p>Author: {{quote.author}}  ||  Submitted By: {{quote.publisher}} on {{ quote.submissionDate| date}}</p>
 <button (click) = 'goalComplete(true)' class="btn btn-danger"> Delete </button>
