--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,40 +1,51 @@
 <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-12">
-        <form (ngSubmit)='submitQuote()' #goalForm='ngForm'>
-          <div class="form-group">
+  <div class="row">
+    <div class="col-md-12">
+      <form (ngSubmit)='submitQuote()' #goalForm='ngForm'>
+        <div class="form-group">
 
-              <label for="quote">Quote</label>
-              <textarea class="form-control" id="quote" [(ngModel)]="newQuote.quote" name="quote" #quote="ngModel" rows="3" required></textarea>
-              <div [hidden]="quote.valid || quote.pristine" class="alert alert-danger">
-                    <p> Quote is Required</p>
-
-                </div>
+          <label for="quote">Quote</label>
+          <textarea class="form-control" id="quote" [(ngModel)]="newQuote.quote" name="quote" #quote="ngModel" rows="3" required></textarea>
+          <div [hidden]="quote.valid || quote.pristine" class="alert alert-danger">
+            <p> Quote is Required</p>
 
           </div>
-            <div class="form-group">
 
-                <label for="author">Author</label>
-                <input type="text" required class="form-control" id="author" [(ngModel)]="newQuote.author" name="author" #author="ngModel">
-                <div [hidden]="author.valid || author.pristine" class="alert alert-danger">
-                      <p> Quote is Required</p>
+        </div>
+        <div class="form-group">
 
-                  </div>
+          <label for="author">Author</label>
+          <input type="text" required class="form-control" id="author" [(ngModel)]="newQuote.author" name="author" #author="ngModel">
+          <div [hidden]="author.valid || author.pristine" class="alert alert-danger">
+            <p> Quote is Required</p>
 
+          </div>
+
+        </div>
+
+        <div class="form-group">
+          <div class="row">
+            <div class="col-md-4"><label for="publisher">Your Name</label>
+              <input type='text' id="publisher" class="form-control" [(ngModel)]="newQuote.publisher" name="publisher" #publisher="ngModel" required>
+              <div [hidden]="publisher.valid || publisher.pristine" class="alert alert-danger">
+                <p> Publisher Name is Required</p>
+
+              </div>
             </div>
+            <div class="col-md-5" style="margin-top:36px;">
+              <div class="form-group">
+                <label for="complete" class="mx-2">Date</label>
+                <input type='date' id="complete" required>
 
-            <div class="form-group">
-                <label for="publisher">Your Name</label>
-                <input type='text' id="publisher" class="form-control" [(ngModel)]="newQuote.publisher" name="publisher" #publisher="ngModel" required>
-                <div [hidden]="publisher.valid || publisher.pristine" class="alert alert-danger">
-                      <p> Publisher Name is Required</p>
-
-                  </div>
-
+              </div>
             </div>
-            <button type="submit" class="btn btn-success btn-lg">Quote</button>
-        </form>
-      </div>
+          </div>
 
+
+        </div>
+        <button type="submit" class="btn btn-success btn-lg">Quote</button>
+      </form>
     </div>
+
+  </div>
 </div>
