--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-100">
   <div class="container">
-    <a class="navbar-brand" href="#"><h1>BrainyQuotes App</h1></a>
+    <a class="navbar-brand" href="#"><h1>BrainyQuotes</h1></a>
     <div class="row">
       <p>Share your favorite quotes</p>
     </div>
