--- a/src/app/quote/quote.component.css
+++ b/src/app/quote/quote.component.css
@@ -9,19 +9,22 @@ ul li {
   /* background: url(src/assets/qr.png) no-repeat left center; */
 }
 #input-section{
-  background-image:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(src/assets/bg6.jpeg);
+  background-image:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../../assets/bg6.jpeg);
   background-repeat: no-repeat;
   background-size: cover;
   height:800px;
   padding:20px;
-  border:2px solid grey;
+  border:2px solid white;
   margin:2%;
+  border-radius:30px;
 }
 #output-section{
-  background-image:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(src/assets/bg.jpg);
+  background-image:linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../../assets/bb2.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  /* background-position:left;  */
   height:800px;
-  padding:20px;
+  padding:38px;
   margin:2%;
+  border-radius:30px;
 }
