--- a/src/app/quote-details/quote-details.component.html
+++ b/src/app/quote-details/quote-details.component.html
@@ -1,3 +1,4 @@
-<p>Author: {{  quote.author  }} {{ " "}}  ||  Submitted By: {{  quote.publisher  }} --- {{ quote.submissionDate | timeCount}}</p>
+<p>
+  Author: {{  quote.author  }} {{ " "}}  ||  Submitted By: {{  quote.publisher  }} --- {{ quote.submissionDate | timeCount}}</p>
 <!-- <p>{{}}</p> -->
 <button (click) = 'goalComplete(true)' class="btn btn-danger"> Delete </button>
