remove commented out code

--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-12">
-      <form (ngSubmit)='submitQuote()' #goalForm='ngForm'>
+      <form (ngSubmit)='submitQuote()' #q='ngForm'>
         <div class="form-group">
 
           <label for="quote">Quote</label>
