--- a/src/app/quote/quote.component.css
+++ b/src/app/quote/quote.component.css
@@ -5,7 +5,8 @@
   color:white;
 }
 ul li {
-  font-style: italic;
+  /* font-style: italic; */
+
 
 }
 #input-section{
@@ -19,7 +20,7 @@ ul li {
   border-radius:30px;
 }
 #output-section{
-  background-image:linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../../assets/bb2.jpg);
+  background-image:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../../assets/bb2.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   /* background-position:left;  */
