--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,5 +1,5 @@
 
-<!-- <div class="container-fluid"> -->
+
   <div class="row">
     <div class="col-md-5" id="input-section">
       <app-quote-form (addQuote)="addNewQuote($event)"></app-quote-form>
@@ -12,7 +12,7 @@
               <br>
               <app-vote></app-vote>
               <button  class="btn btn-success my-2"(click)='toogleDetails(i)'>Quote Details</button>
-              <app-quote-details *ngIf="quote.showAuthor" [quote]='quote'(isComplete)= 'deleteGoal($event,i)' ></app-quote-details>
+              <app-quote-details *ngIf="quote.showAuthor" [quote]='quote'(isComplete)= 'deleteQuote($event,i)' ></app-quote-details>
               <hr>
           </div>
 
